# car_analyser

./: README.md  go.sh  pyproject.toml
.github/workflows/: cat_analyser.yml
app/src/: main.py
app/src/car_traffic/: analysis.py
app/src/common/: exceptions.py  spark_utils.py  utilities.py
app/src/print_details/: print_analysis.py
app/src/report/: print_analysis.py
app/tests/unit/test_car_traffic/: conftest.py  test_analysis.py
app/tests/unit/test_print_details/: test_print_analysis.py
scripts/: linting.sh  run-unit-tests.sh  run.sh  setup.sh
