[project]
name = "car-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "svishal9",email = "shivendra.vishal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false
dependencies = [
    "pyspark (==3.5.4)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
